Fix: continue alignment - various footer calendar fixes https://github.com/presscustomizr/customizr/pull/587 https://github.com/presscustomizr/customizr/pull/589

--- a/assets/front/less/tc_custom.less
+++ b/assets/front/less/tc_custom.less
@@ -2831,7 +2831,7 @@ img.aligncenter {
 }
 /* OTHER CUSTOMIZED WP CSS */
 
-#calendar_wrap table {
+.calendar_wrap table {
   width: 100%;
   border-color: #e1e1e1;
   padding: 0;
@@ -2843,11 +2843,14 @@ img.aligncenter {
   border-spacing: 0;
 }
 
-#footer #calendar_wrap table {
+#footer .calendar_wrap table {
   color:#5A5A5A
 }
-#footer #calendar_wrap table caption{
-color: #EEE;
+footer#footer .calendar_wrap table a {
+ font-size: inherit
+}
+#footer .calendar_wrap table caption{
+  color: #EEE;
 }
 
 
